// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows passing additional props not consumed by the component 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<button
  class="IconButton IconButton--primary"
  data-test-id="Testing ID"
  type="button"
>
  <span
    class="emotion-1 IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="IconButton__icon emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      ,
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`calls an onClick function 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<button
  class="IconButton IconButton--primary"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="emotion-1 IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="IconButton__icon emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      ,
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`prevents an onClick function from being called when disabled 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<button
  class="IconButton IconButton--disabled IconButton--primary"
  data-test-id="cf-ui-icon-button"
  disabled=""
  type="button"
>
  <span
    class="emotion-1 IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="IconButton__icon emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      ,
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`renders as a "muted" link type 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<button
  class="IconButton IconButton--muted"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="emotion-1 IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="IconButton__icon emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      ,
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`renders as a "negative" link type 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<button
  class="IconButton IconButton--negative"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="emotion-1 IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="IconButton__icon emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      ,
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`renders as a "positive" link type 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<button
  class="IconButton IconButton--positive"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="emotion-1 IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="IconButton__icon emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      ,
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`renders as a "primary" link type 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<button
  class="IconButton IconButton--primary"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="emotion-1 IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="IconButton__icon emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      ,
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`renders as a "secondary" link type 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<button
  class="IconButton IconButton--secondary"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="emotion-1 IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="IconButton__icon emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      ,
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`renders as a link 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<a
  class="IconButton IconButton--primary"
  data-test-id="cf-ui-icon-button"
  href="#"
>
  <span
    class="emotion-1 IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="IconButton__icon emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      ,
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</a>
`;

exports[`renders the component 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<button
  class="IconButton IconButton--primary"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="emotion-1 IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="IconButton__icon emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      ,
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

<button
  class="IconButton my-extra-class IconButton--primary"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="emotion-1 IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="IconButton__icon emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      ,
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
  </span>
</button>
`;

exports[`renders with a dropdown indicator 1`] = `
.emotion-2 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
}

.emotion-1 {
  display: inline-block;
  fill: #111B2B;
  height: 18px;
  width: 18px;
}

<button
  class="IconButton IconButton--primary"
  data-test-id="cf-ui-icon-button"
  type="button"
>
  <span
    class="emotion-2 IconButton__inner"
    tabindex="-1"
  >
    <svg
      class="IconButton__icon emotion-0"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      ,
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
    <span
      class="IconButton__label"
    >
      My Icon
    </span>
    <svg
      class="IconButton__dropdown emotion-1"
      data-test-id="cf-ui-icon"
      viewBox="0 0 24 24"
    >
      <path
        d="M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z"
      />
    </svg>
  </span>
</button>
`;
